--- a/src/components/Flower/Flower.css
+++ b/src/components/Flower/Flower.css
@@ -9,5 +9,11 @@
     width: 100%;
     padding: 20px;
     font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.cart-btn-txt {
+    padding-right: 3px;
+}
