--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -3,12 +3,22 @@
     grid-template-columns: 3fr 1fr;
     margin: 50px;
 
+
 }
 
 .product-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
+
+}
+
+.order-container {
+    position: sticky;
+    top: 0;
+    background-color: cyan;
+    border-radius: 30px;
+
 
 }
 
