--- a/src/components/Flower/Flower.css
+++ b/src/components/Flower/Flower.css
@@ -5,6 +5,11 @@
     background-color: azure;
 }
 
+.flower-container img {
+    height: 250px;
+    width: 200px;
+}
+
 .add-cart {
     width: 100%;
     padding: 5px;
